# Luad

./: .clang-format  .gitignore  .gitmodules  CHANGELOG-RU.md  CHANGELOG.md  CMakeLists.txt  README-RU.md  README.md
.github/workflows/: cmake.yml  release-build.yml
cmake/: include_imgui.cmake
plugins/: invalid_opcodes.lua
src/: CMakeLists.txt  bclist.cpp  bclist.hpp  disassembler.cpp  disassembler.hpp  file.cpp  file.hpp  functions.cpp  functions.hpp  linehighlighter.cpp  linehighlighter.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.hpp  settings.cpp  settings.hpp  syntaxhighlighter.cpp  syntaxhighlighter.hpp  utils.cpp  utils.hpp  variables.cpp  variables.hpp  wininterface.cpp  wininterface.hpp  xrefmenu.cpp  xrefmenu.hpp
src/bclist/: CMakeLists.txt  lj.cpp  lj.hpp
src/bclist/src/: CMakeLists.txt  bclist.cpp  bclist.hpp  main.cpp
src/bclist/src/bclist/: lj.cpp  lj.hpp
src/editor/: editor.cpp  editor.hpp  functions.cpp  functions.hpp  highlighter.cpp  highlighter.hpp  variables.cpp  variables.hpp
src/gui/: disassembly.cpp  disassembly.hpp  settings.cpp  settings.hpp  wininterface.cpp  wininterface.hpp
src/imgui_addons/: imgui_addons.cpp  imgui_addons.hpp  imgui_notf.cpp  imgui_notf.hpp
src/luajit/: window.cpp  window.hpp
src/os/: console.hpp  convert.hpp
src/os/unix/: convert.hpp
src/os/windows/: console.hpp  convert.hpp
src/plugins/: bclist_types.cpp  customfuncs.cpp  customfuncs.hpp  dislua_types.cpp  plugins.cpp  plugins.hpp
submodules/: qhexedit2.cmake
